Implement payment listing (new e2e test, spec update, code generation, unit tests and implementation)
