# pkg/restapi/operations/payments/list_payments_responses.go
@@ -1,0 +1,58 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package payments
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/volmedo/pAPI/pkg/models"
+)
+
+// ListPaymentsOKCode is the HTTP code returned for type ListPaymentsOK
+const ListPaymentsOKCode int = 200
+
+/*ListPaymentsOK List of payment details
+
+swagger:response listPaymentsOK
+*/
+type ListPaymentsOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PaymentDetailsListResponse `json:"body,omitempty"`
+}
+
+// NewListPaymentsOK creates ListPaymentsOK with default headers values
+func NewListPaymentsOK() *ListPaymentsOK {
+
+	return &ListPaymentsOK{}
+}
+
+// WithPayload adds the payload to the list payments o k response
+func (o *ListPaymentsOK) WithPayload(payload *models.PaymentDetailsListResponse) *ListPaymentsOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the list payments o k response
+func (o *ListPaymentsOK) SetPayload(payload *models.PaymentDetailsListResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *ListPaymentsOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
